--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -408,7 +408,11 @@ there.
 
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+    #deskMenu{
+        max-width: 100%;
+    }
+}
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
