--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -20,6 +20,7 @@
     display: block;
     line-height: 1.188em;
     float: left; }
+    
   .slicknav_menu .slicknav_icon {
     float: left;
     width: 1.125em;
@@ -57,7 +58,8 @@
   .slicknav_nav ul {
     display: block; }
   .slicknav_nav li {
-    display: block; }
+    display: block; 
+text-align: center;}
   .slicknav_nav .slicknav_arrow {
     font-size: 0.8em;
     margin: 0 0 0 0.4em; }
@@ -78,16 +80,16 @@
 .slicknav_menu {
   font-size: 1.5em;
   box-sizing: border-box;
-  background: #000000;
+  background: #0A2E63;
   padding: 5px; }
   .slicknav_menu * {
     box-sizing: border-box; }
   .slicknav_menu .slicknav_menutxt {
-    color: #fff;
+    color: #E3E3E3;
     /*font-weight: bold;*/
-    text-shadow: 0 1px 3px #000; }
+    text-shadow: 0 1px 3px #0A2E63; }
   .slicknav_menu .slicknav_icon-bar {
-    background-color: #fff; }
+    background-color: #E3E3E3; }
 
 .slicknav_btn {
   margin: 5px 5px 6px;
@@ -96,10 +98,10 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  background-color: #000; }
+  background-color: #0A2E63; }
 
 .slicknav_nav {
-  color: #fff;
+  color: #E3E3E3;
   margin: 0;
   padding: 0;
   font-size: 0.875em;
@@ -123,13 +125,13 @@
     padding: 5px 10px;
     margin: 2px 5px;
     text-decoration: none;
-    color: #fff; }
+    color: #E3E3E3; }
     .slicknav_nav a:hover {
       -webkit-border-radius: 6px;
       -moz-border-radius: 6px;
       border-radius: 6px;
       background: #ccc;
-      color: #222; }
+      color:  #ff4400; }
   .slicknav_nav .slicknav_txtnode {
     margin-left: 15px; }
   .slicknav_nav .slicknav_item a {
