no menu color on firefox

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -176,7 +176,6 @@ input[type="button"] {
   height: 30px;
   /*width: 30px;*/
   vertical-align: middle;
-    background-color: none;
   color: #E3E3E3;
   text-align: center;
   font-size: 18px;
@@ -202,8 +201,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  background-color: none;
-    color: #ff4400;
+/*    color: #ff4400;*/
   /*border-color: #000;*/
   outline: 0; }
 .button.button-primary,
