--- a/aviana/css/aviana-intro.css
+++ b/aviana/css/aviana-intro.css
@@ -14,100 +14,139 @@ h5 {
 
 #threeCanvas {
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     width: 100%;
-/*    height: 100%;*/
     height: 100vh;
     line-height: 1.9em;
     font-size: 3em;
     color: #00ffff;
     z-index: -1;
     background: #605ecc;
-    /* For browsers that do not support gradients
-    background: -webkit-linear-gradient(#525B90, #E7C0E2);
-    /* For Safari 5.1 to 6.0
-    background: -o-linear-gradient(#525B90, #E7C0E2);
-    /* For Opera 11.1 to 12.0
-    background: -moz-linear-gradient(#525B90, #E7C0E2);
-    /* For Firefox 3.6 to 15 */
-/*    background: linear-gradient(45deg, #525B90, #E7C0E2);*/
+    background: linear-gradient( #292375, #373094, #605ecc, #bb9cda);
+    background-size: 100% 200%;
+    animation: sky 10s ease infinite;
+    -webkit-animation: sky 10s ease infinite;
+}
 
-    background: linear-gradient( #292375, #373094, #605ecc ,  #bb9cda );
-    /* Standard syntax */
-    background-size: 200% 200%;
-    -webkit-animation: sky 20s ease infinite;
-    animation: sky 20s ease infinite;
+.morning {
+    background: linear-gradient(#4c558e, #8182cc, #b99bd2, #e4b8dc) !important;
+    background-size: 100% 200% !important;
+}
+
+.evening {
+    background: linear-gradient( #292375, #373094, #605ecc, #bb9cda) !important;
+    background-size: 100% 200% !important;
+}
+
+.night {
+    background: linear-gradient(#121421, #233248, #4c5166, #a3735c) !important;
+    background-size: 100% 200% !important;
 }
 
 @-webkit-keyframes sky {
     0% {
-        background-position: 47% 0%
+        background-position: 100% 100%
     }
     50% {
-        background-position: 54% 100%
+        background-position: 100% 0%
     }
     100% {
-        background-position: 47% 0%
+        background-position: 100% 100%
     }
 }
 
 @keyframes sky {
     0% {
-        background-position: 47% 0%
+        background-position: 100% 100%
     }
     50% {
-        background-position: 54% 100%
+        background-position: 100% 0%
     }
     100% {
-        background-position: 47% 0%
+        background-position: 100% 100%
     }
 }
+
+#compass-circle {
+    position: absolute;
+    top: 16.67%;
+    left: 0;
+    width: 100%;
+    height: 66.66%;
+    background: url(../CompassCircle.svg) center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 1;
+}
+#compass-nav {
+    position: absolute;
+    top: 16%;
+    left: 0;
+    width: 100%;
+    height: 68%;
+
+    background: url(../CompassLetters.svg) center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 2;
+}
+
 
 #aboveBirds {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
-    margin-top: 3em;
+    padding-top: 5%;
     width: 90%;
-    height:100vh;
-    line-height: 1.0em;
+    height: 90vh;
     font-size: 1em;
     color: #E3E3E3;
-    background: url(CompassLetters.svg) 50% center no-repeat;
-    background-size: cover;
+    padding-left:5%;
+    z-index: 2;
 
 }
 
-#aboveBirds a{
+#aboveBirds a {
     color: white;
-    text-decoration: none;
+    text-decoration: underline;
+
 }
 
-#compass {
-    position: absolute;
-    top: 3em;
-    left: 3em;
-    width: 100%;
-    height:100vh;
-    line-height: 1.0em;
-    font-size: 1em;
-    color: #E3E3E3;
-    background: url(no-dimensions-or-ratio.svg);
-    background-size: contain;
-}
-
-#demoLogo {
-    margin-left: 3em;
-}
 
 #good-something {
-    position: relative;
-    padding-top: 12em;
-    margin-left: 3em;
+
+    margin-top: 10em;
+
 }
 
+
+
+
+
+
+/*
 .row {
     padding-left: 5%;
     padding-right: 5%;
 }
+*/
+
+/*
+#demo-logo{
+    width: 10em;
+    position: absolute;
+    top:1%;
+    left:3%;
+
+}
+
+
+#demo-menu{
+    width: 50% ;
+    height: 1em;
+
+    color:white;
+
+}
+*/
